--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,10 @@
 
 /* Sass Template */ 
 @import'./include/variables.scss';
+@import'./include/navbar.scss';
+@import'./include/typography.scss';
+@import'./include/global.scss';
+
+
+
+
