--- a/sass/include/navbar.scss
+++ b/sass/include/navbar.scss
@@ -228,3 +228,9 @@ body {
         display: block;
     }
 }
+@media (min-width: 768px){    
+    .navbar-nav>li>a {
+        padding-top: 20px;
+        padding-bottom: 15px;
+    }
+}
