--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,8 @@
 @import'./include/navbar.scss';
 @import'./include/typography.scss';
 @import'./include/global.scss';
-
+@import'./Form/form.scss';
+@import'./include/color.scss';
 
 
 
