--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import'./include/global.scss';
 @import'./Form/form.scss';
 @import'./include/color.scss';
-
+@import'./include/nav-L.scss';
+@import'./include/main.scss';
 
 
