--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Raleway&family=Rubik&display=swap");
 /* Sass Template */
 body {
@@ -98,7 +99,7 @@ body {
 }
 
 .navbar .navbar-right li:first-child a {
-  padding-right: 30px;
+  padding-right: 40px;
 }
 
 .navbar ul li i {
@@ -245,10 +246,6 @@ body {
   font-size: 13px;
 }
 
-.navbar .navbar-right .dropdown-toggle::after {
-  display: none;
-}
-
 @media (min-width: 1200px) {
   .form-inline .input-group {
     width: 300px;
@@ -275,6 +272,11 @@ body {
     display: block;
   }
 }
+li > i {
+  height: 30px;
+  width: 30px;
+}
+
 /* typography classes */
 .font-baloo {
   font-family: "Baloo Thambi 2", cursive;
@@ -436,6 +438,78 @@ body {
 
 .color-yellow-bg {
   background: #389638;
+}
+
+div#nav-L {
+  width: 190px;
+  /*幅の指定*/
+  display: inline;
+  /*IE6のマージン算出のバグ対策*/
+  float: left;
+  /*サブメニューのカラムを左寄せにする*/
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+/*サブメニューのヘッダ部分（余白調整・背景画像・背景色・文字サイズなど）*/
+div#submenu_header {
+  height: 26px;
+  padding: 4px 0px 0px 0px;
+  background-image: url("images/bg_submenu_header.gif");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-color: #cccccc;
+  font-size: 90%;
+  font-weight: bold;
+  text-align: center;
+}
+
+/*サブメニューのボディ部分（余白調整・背景画像・背景色）*/
+ul#submenu_body {
+  padding-left: 10px;
+  padding-right: 15px;
+  padding-bottom: 6px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-color: #cccccc;
+}
+
+ul#submenu_body li {
+  font-size: larger;
+  /*文字サイズを90%にする*/
+  list-style-type: none;
+  /*リストマーカー無しにする*/
+  display: inline;
+  /*リスト項目をインライン表示にする*/
+}
+
+ul#submenu_body li a {
+  display: block;
+  /*リンクをブロック表示にする*/
+  margin: 0px 4px 0px 4px;
+  /*サブメニュー項目のマージン*/
+  padding: 2px 0px 2px 20px;
+  /*サブメニュー項目のパディング*/
+  background-color: #eeeeee;
+  /*サブメニュー項目の背景色*/
+  text-decoration: none;
+  /*リンクの下線を無くす*/
+}
+
+ul#submenu_body li a:hover {
+  background-color: #ffffff;
+  /*リンクにマウスが乗ったら色を変える*/
+}
+
+img {
+  width: 190px;
+}
+
+main#main-site {
+  width: 700px;
+  float: left;
+  margin: 30px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
