--- a/sass/include/main.scss
+++ b/sass/include/main.scss
@@ -1,5 +1,6 @@
-main#main-site {
-    width : 700px;
+#main-site {
+    width : 1100px;
     float : left;
     margin : 30px 0;
+    margin-left: 30px;
 }
