--- a/style.css
+++ b/style.css
@@ -506,10 +506,11 @@ img {
   width: 190px;
 }
 
-main#main-site {
-  width: 700px;
+#main-site {
+  width: 1100px;
   float: left;
   margin: 30px 0;
+  margin-left: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
