--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,5 +9,8 @@
 @import'./include/color.scss';
 @import'./include/nav-L.scss';
 @import'./include/main.scss';
+@import'./include/purchase.scss';
+@import'./include/list.scss';
+@import'./include/cart.scss';
 
 
