--- a/style.css
+++ b/style.css
@@ -513,4 +513,57 @@ img {
   margin-left: 30px;
 }
 
+table, th, td {
+  border-collapse: collapse;
+  border: 1px solid #ccc;
+  line-height: 1.5;
+}
+
+table.type06 th {
+  width: 150px;
+  padding: 10px;
+  font-weight: bold;
+  vertical-align: top;
+}
+
+table.type06 td {
+  width: 350px;
+  padding: 10px;
+  vertical-align: top;
+}
+
+tr:nth-child(even) {
+  background: #d9d9d9;
+}
+
+#gallary ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#gallary ul li {
+  width: 220px;
+  margin: 0 30px 30px 0;
+  padding: 10px 0;
+  border: solid 1px #242222;
+  float: left;
+  text-align: center;
+  color: #b7a077;
+  font-weight: bold;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+#gallary ui li:nth-child(3n) {
+  margin-right: 0;
+}
+
+#table {
+  width: 800px;
+}
+
+#B {
+  width: 200px;
+}
+
 /*# sourceMappingURL=style.css.map */
