--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,5 +12,6 @@
 @import'./include/purchase.scss';
 @import'./include/list.scss';
 @import'./include/cart.scss';
+@import'./include/footer.scss';
 
 
