--- a/sass/include/main.scss
+++ b/sass/include/main.scss
@@ -1,6 +1,59 @@
 #main-site {
-    width : 1100px;
-    float : left;
-    margin : 30px 0;
+    width: 1100px;
+    float: left;
+    margin: 30px 0;
     margin-left: 30px;
 }
+
+.slide {
+    position: relative;
+    width: 900px;
+    height: 400px;
+    overflow: hidden;
+}
+
+.slide img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+}
+
+@keyframes slideshow {
+  0%{
+    opacity: 0;
+  }
+  10%{
+    opacity: 1;
+  }
+  28%{
+    opacity: 1
+  }
+  38%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 0;
+  }
+}
+
+.slide img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    animation :slideshow 24s linear infinite;
+  }
+   
+  .slide img:nth-child(2){
+    animation-delay: 8s;
+  }
+   
+  .slide img:last-child{
+    animation-delay: 16s;
+  }
